wui/static/css/main.css
/* ... */
nav.crumb-wrap .breadcrumb {
    color: #777;
    font-size: 1.4rem;
    line-height: 3rem;
}
nav.crumb-wrap .breadcrumb:last-child {
    color: #222;
}

nav.crumb-wrap .breadcrumb:after {
    content: '\E5CC';
    color: #aaa;
    vertical-align: top;
    display: inline-block;
    font-family: 'Material Icons';
    font-size: 2.2rem;
    margin: 0 1rem 0 1rem;
    -webkit-font-smoothing: antialiased;
}
nav.crumb-wrap .breadcrumb:last-child:after {
    display: none;
}

nav.crumb-wrap .breadcrumb:before {
    display: none;
}


/** Exercise page **/

#exercise-card #tabs-wrap {
    text-align: center;
}

#exercise-card .tabs .tab {
    text-transform: none;
}

#exercise-card .tabs .tab a {
    font-size: 2.1rem;
    color: gray;
}

#exercise-card .tabs .tab a:hover,
#exercise-card .tabs .tab a.active {
    background-color: transparent;
    color: #4DAB54;
}

#exercise-card .tabs .tab a:focus,
#exercise-card .tabs .tab a:focus.active {
    background-color: rgba(77, 171, 84, 0.2);
    outline: none;
}

#exercise-card .tabs .indicator {
    background-color: #4DAB54;
}

#exercise-card .card-content {
    padding: 1.3rem;
    border-top: 1px solid #e2e2e2;
}

@media only screen and (min-width: 601px) {
    #exercise-card .card-content {
        padding: 2.4rem;
    }
}

#exercise-card .subheading {
    color: #4DAB54;
    font-weight: 500;
}

#exercise-card h2 {
    font-size: 2.3rem;
}

#exercise-card pre.feedback {
    font-size: 1.4rem;
    white-space: normal;
}

#exercise-card pre.auto-feedback {
    background-color: #f5f5f5;
    white-space: pre;
    overflow: auto;
}

#exercise-card .grade-number {
    font-weight: 500;
}

#exercise-card label[for=feedback],
#exercise-card label[for=grade] {
    font-size: 1.6rem;
}

#exercise-card #feedback:focus {
    border-bottom: 1px solid #469c45;
    -webkit-box-shadow: 0 1px 0 0 #469c45;
    box-shadow: 0 1px 0 0 #469c45;
}

#exercise-card #feedback:focus + label {
    color: #469c45;
}

#exercise-card #submission-info,
#exercise-card .assessment {
    margin-bottom: 3rem;
}

#exercise-card #submission-info {
    display: flex;
    flex-wrap: wrap;
}

#exercise-card #grade:focus {
    border-bottom: 1px solid #469c45;
    -webkit-box-shadow: 0 1px 0 0 #469c45;
    box-shadow: 0 1px 0 0 #469c45;
}

#exercise-card #grade:focus + label {
    color: #469c45;
}

#exercise-card .collection-item .row {
    margin-bottom: 0;
}

#exercise-card .collection-item.inactive {
    color: #aaa;
}

#exercise-card .collection-item.inactive:hover {
    background-color: unset;
}

#exercise-card .eval-logo-auto {
    vertical-align: sub;
    width: 24px;
    margin-left: 10px;
}

#exercise-card .time {
    font-size: 1.9rem;
}

#exercise-card .grade {
    text-align: right;
    font-size: 1.9rem;
}

#exercise-card .eval-logo-teacher {
    color: #aaa;
    margin-left: 10px;
}

#exercise-card .eval-logo-missing {
    vertical-align: middle;
    width: 24px;
    margin-left: 10px;
}

#exercise-card .divided-collection .collection-item {
    box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.1),
    0 2px 1px -2px rgba(0, 0, 0, 0.09),
    0 1px 3px 0 rgba(0, 0, 0, 0.1);
}

#exercise-card .submission-title {
    display: inline-block;
    margin: 2.5rem 0 1.5rem 0;
}

#exercise-card span.last-submission-label {
    margin-left: 1rem;
}

#exercise-card h3 {
    font-size: 2.3rem;
}

#exercise-card h4 {
    font-size: 2rem;
}

#exercise-card .all-submissions-wrap {
    max-height: 35vh;
    overflow: auto;
}

#exercise-card .eval-logo-auto.sm {
    width: 22px;
}

#exercise-card .eval-logo-missing.sm {
    width: 22px;
}


/** Courses page **/

#courses-list div.teacher-course-wrapper {
    position: relative;
}

#courses-list a.course-add-students {
    position: absolute;
    top: 11px;
    right: 5px;
    color: #4cab54;
    text-transform: none;
}

#courses-list span.course-student-count {
    font-size: 1.9rem;
    color: #333;
    margin-left: 1rem;
    display: none;
}

@media only screen and (min-width: 400px) {
    #courses-list span.course-student-count {
        display: initial;
    }
    #courses-list a.course-add-students {
        right: 20px;
    }
}

@media only screen and (min-width: 600px) {
    #courses-list a.course-add-students {
        top: 18px;
    }
}

#courses-list a.course-add-students:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

#courses-list a.course-add-students > i.material-icons {
    font-size: 2.5rem;
}


/** Exercises page **/

#exercises-list .exercise-item {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    flex-grow: 1;
}

#exercises-list .exercise-item > * {
    margin: 0 1rem;
}

#exercises-list .deadline {
    font-size: 0.8em;
}

#exercises-list .grade {
    text-align: right;
    font-size: 0.8em;
}

#exercises-list .eval-logo-auto {
    vertical-align: sub;
    width: 24px;
    margin-left: 10px;
}

#exercises-list .eval-logo-teacher {
    color: #aaa;
    margin-left: 10px;
}

#exercises-list .eval-logo-missing {
    vertical-align: middle;
    width: 24px;
    margin-left: 10px;
}

#exercises-list .collection-item .row {
    margin-bottom: 0;
}


/* Code editor */

.editor-wrapper {
    margin-top: 3rem;
    margin-bottom: 3rem;
    padding: 0.3rem;
    background-color: #eee;
}

@media only screen and (min-width: 601px) {
    .editor-wrapper {
        padding: 1rem;
    }
}

.CodeMirror {
    font-size: 1.9rem;
    height: auto;
}

.CodeMirror-scroll {
    min-height: 20vh;
    max-height: 85vh;
}

.no-cursor .CodeMirror-cursors {
    visibility: hidden !important;
}


/** Participants page **/

#participants-container h4.subsection {
    font-size: 2rem;
    margin-top: 4rem;
    margin-bottom: 2rem;
}

#participants-container #add-students-wrap {
    border: 1px solid #ddd;
    background-color: #eee;
}

#participants-container div#add-students-help {
    margin-bottom: 2rem;
}

#participants-container div#new-students-form-wrap {
    margin-bottom: 0;
}
/* ... */

